; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_hevc_mvs.c_derive_temporal_colocated_mvs.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_hevc_mvs.c_derive_temporal_colocated_mvs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_13__ = type { i64, %struct.TYPE_10__, %struct.TYPE_9__* }
%struct.TYPE_10__ = type { i64 }
%struct.TYPE_9__ = type { %struct.TYPE_11__* }
%struct.TYPE_11__ = type { i32, i64* }
%struct.TYPE_12__ = type { i32 }

@PF_INTRA = common dso_local global i32 0, align 4
@PF_L0 = common dso_local global i32 0, align 4
@PF_BI = common dso_local global i32 0, align 4
@L1 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_13__*, i32, i32, i32*, i32, i32, %struct.TYPE_11__*)* @derive_temporal_colocated_mvs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @derive_temporal_colocated_mvs(%struct.TYPE_13__* %0, i32 %1, i32 %2, i32* %3, i32 %4, i32 %5, %struct.TYPE_11__* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_12__, align 4
  %10 = alloca %struct.TYPE_13__*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca %struct.TYPE_11__*, align 8
  %16 = alloca %struct.TYPE_11__*, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %9, i32 0, i32 0
  store i32 %1, i32* %20, align 4
  store %struct.TYPE_13__* %0, %struct.TYPE_13__** %10, align 8
  store i32 %2, i32* %11, align 4
  store i32* %3, i32** %12, align 8
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store %struct.TYPE_11__* %6, %struct.TYPE_11__** %15, align 8
  %21 = load %struct.TYPE_13__*, %struct.TYPE_13__** %10, align 8
  %22 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %21, i32 0, i32 2
  %23 = load %struct.TYPE_9__*, %struct.TYPE_9__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %23, i32 0, i32 0
  %25 = load %struct.TYPE_11__*, %struct.TYPE_11__** %24, align 8
  store %struct.TYPE_11__* %25, %struct.TYPE_11__** %16, align 8
  %26 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %9, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* @PF_INTRA, align 4
  %29 = icmp eq i32 %27, %28
  br i1 %29, label %30, label %31

30:                                               ; preds = %7
  store i32 0, i32* %8, align 4
  br label %115

31:                                               ; preds = %7
  %32 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %9, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = load i32, i32* @PF_L0, align 4
  %35 = and i32 %33, %34
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %39, label %37

37:                                               ; preds = %31
  %38 = call i32 @CHECK_MVSET(i32 1)
  store i32 %38, i32* %8, align 4
  br label %115

39:                                               ; preds = %31
  %40 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %9, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = load i32, i32* @PF_L0, align 4
  %43 = icmp eq i32 %41, %42
  br i1 %43, label %44, label %46

44:                                               ; preds = %39
  %45 = call i32 @CHECK_MVSET(i32 0)
  store i32 %45, i32* %8, align 4
  br label %115

46:                                               ; preds = %39
  %47 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %9, i32 0, i32 0
  %48 = load i32, i32* %47, align 4
  %49 = load i32, i32* @PF_BI, align 4
  %50 = icmp eq i32 %48, %49
  br i1 %50, label %51, label %112

51:                                               ; preds = %46
  store i32 0, i32* %17, align 4
  store i32 0, i32* %19, align 4
  br label %52

52:                                               ; preds = %88, %51
  %53 = load i32, i32* %19, align 4
  %54 = icmp slt i32 %53, 2
  br i1 %54, label %55, label %91

55:                                               ; preds = %52
  store i32 0, i32* %18, align 4
  br label %56

56:                                               ; preds = %84, %55
  %57 = load i32, i32* %18, align 4
  %58 = load %struct.TYPE_11__*, %struct.TYPE_11__** %16, align 8
  %59 = load i32, i32* %19, align 4
  %60 = sext i32 %59 to i64
  %61 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %58, i64 %60
  %62 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %61, i32 0, i32 0
  %63 = load i32, i32* %62, align 8
  %64 = icmp slt i32 %57, %63
  br i1 %64, label %65, label %87

65:                                               ; preds = %56
  %66 = load %struct.TYPE_11__*, %struct.TYPE_11__** %16, align 8
  %67 = load i32, i32* %19, align 4
  %68 = sext i32 %67 to i64
  %69 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %66, i64 %68
  %70 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %69, i32 0, i32 1
  %71 = load i64*, i64** %70, align 8
  %72 = load i32, i32* %18, align 4
  %73 = sext i32 %72 to i64
  %74 = getelementptr inbounds i64, i64* %71, i64 %73
  %75 = load i64, i64* %74, align 8
  %76 = load %struct.TYPE_13__*, %struct.TYPE_13__** %10, align 8
  %77 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %76, i32 0, i32 0
  %78 = load i64, i64* %77, align 8
  %79 = icmp sgt i64 %75, %78
  br i1 %79, label %80, label %83

80:                                               ; preds = %65
  %81 = load i32, i32* %17, align 4
  %82 = add nsw i32 %81, 1
  store i32 %82, i32* %17, align 4
  br label %87

83:                                               ; preds = %65
  br label %84

84:                                               ; preds = %83
  %85 = load i32, i32* %18, align 4
  %86 = add nsw i32 %85, 1
  store i32 %86, i32* %18, align 4
  br label %56

87:                                               ; preds = %80, %56
  br label %88

88:                                               ; preds = %87
  %89 = load i32, i32* %19, align 4
  %90 = add nsw i32 %89, 1
  store i32 %90, i32* %19, align 4
  br label %52

91:                                               ; preds = %52
  %92 = load i32, i32* %17, align 4
  %93 = icmp ne i32 %92, 0
  br i1 %93, label %101, label %94

94:                                               ; preds = %91
  %95 = load i32, i32* %13, align 4
  %96 = icmp eq i32 %95, 0
  br i1 %96, label %97, label %99

97:                                               ; preds = %94
  %98 = call i32 @CHECK_MVSET(i32 0)
  store i32 %98, i32* %8, align 4
  br label %115

99:                                               ; preds = %94
  %100 = call i32 @CHECK_MVSET(i32 1)
  store i32 %100, i32* %8, align 4
  br label %115

101:                                              ; preds = %91
  %102 = load %struct.TYPE_13__*, %struct.TYPE_13__** %10, align 8
  %103 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %102, i32 0, i32 1
  %104 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %103, i32 0, i32 0
  %105 = load i64, i64* %104, align 8
  %106 = load i64, i64* @L1, align 8
  %107 = icmp eq i64 %105, %106
  br i1 %107, label %108, label %110

108:                                              ; preds = %101
  %109 = call i32 @CHECK_MVSET(i32 0)
  store i32 %109, i32* %8, align 4
  br label %115

110:                                              ; preds = %101
  %111 = call i32 @CHECK_MVSET(i32 1)
  store i32 %111, i32* %8, align 4
  br label %115

112:                                              ; preds = %46
  br label %113

113:                                              ; preds = %112
  br label %114

114:                                              ; preds = %113
  store i32 0, i32* %8, align 4
  br label %115

115:                                              ; preds = %114, %110, %108, %99, %97, %44, %37, %30
  %116 = load i32, i32* %8, align 4
  ret i32 %116
}

declare dso_local i32 @CHECK_MVSET(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
